src/aifParser/aifParser.java
package aifParser;
// Generated from .\aif.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class aifParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, NUM=28, ID=29, WHITESPACE=30, COMMENT=31;
	public static final int
		RULE_aif = 0, RULE_typedec = 1, RULE_type = 2, RULE_terms = 3, RULE_term = 4, 
		RULE_symdecs = 5, RULE_symdec = 6, RULE_aifrule = 7, RULE_facts = 8, RULE_fact = 9, 
		RULE_arrow = 10, RULE_vardecs = 11, RULE_vardec = 12, RULE_vartype = 13;
	public static final String[] ruleNames = {
		"aif", "typedec", "type", "terms", "term", "symdecs", "symdec", "aifrule", 
		"facts", "fact", "arrow", "vardecs", "vardec", "vartype"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'Problem:'", "';'", "'Types:'", "'Sets:'", "'Functions:'", "'Facts:'", 
		"'Rules:'", "'='", "'{...}'", "'{'", "','", "'}'", "'++'", "'_'", "'('", 
		"')'", "'val'", "'/'", "'.'", "'in'", "'notin'", "'=>'", "'=['", "']=>'", 
		"':'", "'value'", "'untyped'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "NUM", "ID", "WHITESPACE", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "aif.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public aifParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AifContext extends ParserRuleContext {
		public SymdecsContext functionsDef;
		public SymdecsContext factsDef;
		public TerminalNode ID() { return getToken(aifParser.ID, 0); }
		public TermsContext terms() {
			return getRuleContext(TermsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(aifParser.EOF, 0); }
		public List<SymdecsContext> symdecs() {
			return getRuleContexts(SymdecsContext.class);
		}
		public SymdecsContext symdecs(int i) {
			return getRuleContext(SymdecsContext.class,i);
		}
		public List<TypedecContext> typedec() {
			return getRuleContexts(TypedecContext.class);
		}
		public TypedecContext typedec(int i) {
			return getRuleContext(TypedecContext.class,i);
		}
		public List<AifruleContext> aifrule() {
			return getRuleContexts(AifruleContext.class);
		}
		public AifruleContext aifrule(int i) {
			return getRuleContext(AifruleContext.class,i);
		}
		public AifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aif; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).enterAif(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).exitAif(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aifVisitor ) return ((aifVisitor<? extends T>)visitor).visitAif(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AifContext aif() throws RecognitionException {
		AifContext _localctx = new AifContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_aif);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			match(T__0);
			setState(29);
			match(ID);
			setState(30);
			match(T__1);
			setState(31);
			match(T__2);
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(32);
				typedec();
				}
				}
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(38);
			match(T__3);
			setState(39);
			terms();
			setState(40);
			match(T__1);
			setState(41);
			match(T__4);
			setState(42);
			((AifContext)_localctx).functionsDef = symdecs();
			setState(43);
			match(T__1);
			setState(44);
			match(T__5);
			setState(45);
			((AifContext)_localctx).factsDef = symdecs();
			setState(46);
			match(T__1);
			setState(47);
			match(T__6);
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(48);
				aifrule();
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedecContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(aifParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TypedecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).enterTypedec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).exitTypedec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aifVisitor ) return ((aifVisitor<? extends T>)visitor).visitTypedec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypedecContext typedec() throws RecognitionException {
		TypedecContext _localctx = new TypedecContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_typedec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(ID);
			setState(57);
			match(T__7);
			setState(58);
			type();
			setState(59);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	 
		public TypeContext() { }
		public void copyFrom(TypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EnumerationContext extends TypeContext {
		public List<TerminalNode> ID() { return getTokens(aifParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(aifParser.ID, i);
		}
		public EnumerationContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).enterEnumeration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).exitEnumeration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aifVisitor ) return ((aifVisitor<? extends T>)visitor).visitEnumeration(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InfiniteContext extends TypeContext {
		public InfiniteContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).enterInfinite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).exitInfinite(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aifVisitor ) return ((aifVisitor<? extends T>)visitor).visitInfinite(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UnionContext extends TypeContext {
		public List<TerminalNode> ID() { return getTokens(aifParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(aifParser.ID, i);
		}
		public UnionContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).enterUnion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).exitUnion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aifVisitor ) return ((aifVisitor<? extends T>)visitor).visitUnion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_type);
		int _la;
		try {
			setState(80);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				_localctx = new InfiniteContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				match(T__8);
				}
				break;
			case T__9:
				_localctx = new EnumerationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				match(T__9);
				setState(63);
				match(ID);
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__10) {
					{
					{
					setState(64);
					match(T__10);
					setState(65);
					match(ID);
					}
					}
					setState(70);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(71);
				match(T__11);
				}
				break;
			case ID:
				_localctx = new UnionContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				match(ID);
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__12) {
					{
					{
					setState(73);
					match(T__12);
					setState(74);
					match(ID);
					}
					}
					setState(79);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermsContext extends ParserRuleContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public TermsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terms; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).enterTerms(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).exitTerms(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aifVisitor ) return ((aifVisitor<? extends T>)visitor).visitTerms(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermsContext terms() throws RecognitionException {
		TermsContext _localctx = new TermsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_terms);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			term();
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__10) {
				{
				{
				setState(83);
				match(T__10);
				setState(84);
				term();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
	 
		public TermContext() { }
		public void copyFrom(TermContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ComposedContext extends TermContext {
		public TerminalNode ID() { return getToken(aifParser.ID, 0); }
		public TermsContext terms() {
			return getRuleContext(TermsContext.class,0);
		}
		public ComposedContext(TermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).enterComposed(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).exitComposed(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aifVisitor ) return ((aifVisitor<? extends T>)visitor).visitComposed(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WildcardContext extends TermContext {
		public WildcardContext(TermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).enterWildcard(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).exitWildcard(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aifVisitor ) return ((aifVisitor<? extends T>)visitor).visitWildcard(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AbstractionContext extends TermContext {
		public TermsContext terms() {
			return getRuleContext(TermsContext.class,0);
		}
		public AbstractionContext(TermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).enterAbstraction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).exitAbstraction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aifVisitor ) return ((aifVisitor<? extends T>)visitor).visitAbstraction(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AtomContext extends TermContext {
		public TerminalNode ID() { return getToken(aifParser.ID, 0); }
		public AtomContext(TermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).enterAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).exitAtom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aifVisitor ) return ((aifVisitor<? extends T>)visitor).visitAtom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_term);
		try {
			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new AtomContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				match(ID);
				}
				break;
			case 2:
				_localctx = new WildcardContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				match(T__13);
				}
				break;
			case 3:
				_localctx = new ComposedContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(92);
				match(ID);
				setState(93);
				match(T__14);
				setState(94);
				terms();
				setState(95);
				match(T__15);
				}
				break;
			case 4:
				_localctx = new AbstractionContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				match(T__16);
				setState(98);
				match(T__14);
				setState(99);
				terms();
				setState(100);
				match(T__15);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SymdecsContext extends ParserRuleContext {
		public List<SymdecContext> symdec() {
			return getRuleContexts(SymdecContext.class);
		}
		public SymdecContext symdec(int i) {
			return getRuleContext(SymdecContext.class,i);
		}
		public SymdecsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symdecs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).enterSymdecs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).exitSymdecs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aifVisitor ) return ((aifVisitor<? extends T>)visitor).visitSymdecs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SymdecsContext symdecs() throws RecognitionException {
		SymdecsContext _localctx = new SymdecsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_symdecs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			symdec();
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__10) {
				{
				{
				setState(105);
				match(T__10);
				setState(106);
				symdec();
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SymdecContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(aifParser.ID, 0); }
		public TerminalNode NUM() { return getToken(aifParser.NUM, 0); }
		public SymdecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symdec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).enterSymdec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).exitSymdec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aifVisitor ) return ((aifVisitor<? extends T>)visitor).visitSymdec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SymdecContext symdec() throws RecognitionException {
		SymdecContext _localctx = new SymdecContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_symdec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(ID);
			setState(113);
			match(T__17);
			setState(114);
			match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AifruleContext extends ParserRuleContext {
		public FactsContext lhs;
		public FactsContext rhs;
		public TerminalNode ID() { return getToken(aifParser.ID, 0); }
		public VardecsContext vardecs() {
			return getRuleContext(VardecsContext.class,0);
		}
		public ArrowContext arrow() {
			return getRuleContext(ArrowContext.class,0);
		}
		public List<FactsContext> facts() {
			return getRuleContexts(FactsContext.class);
		}
		public FactsContext facts(int i) {
			return getRuleContext(FactsContext.class,i);
		}
		public AifruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aifrule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).enterAifrule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).exitAifrule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aifVisitor ) return ((aifVisitor<? extends T>)visitor).visitAifrule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AifruleContext aifrule() throws RecognitionException {
		AifruleContext _localctx = new AifruleContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_aifrule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(ID);
			setState(117);
			match(T__14);
			setState(118);
			vardecs();
			setState(119);
			match(T__15);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(120);
				((AifruleContext)_localctx).lhs = facts();
				}
			}

			setState(123);
			arrow();
			setState(124);
			((AifruleContext)_localctx).rhs = facts();
			setState(125);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactsContext extends ParserRuleContext {
		public List<FactContext> fact() {
			return getRuleContexts(FactContext.class);
		}
		public FactContext fact(int i) {
			return getRuleContext(FactContext.class,i);
		}
		public FactsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_facts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).enterFacts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).exitFacts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aifVisitor ) return ((aifVisitor<? extends T>)visitor).visitFacts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FactsContext facts() throws RecognitionException {
		FactsContext _localctx = new FactsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_facts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			fact();
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__18) {
				{
				{
				setState(128);
				match(T__18);
				setState(129);
				fact();
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactContext extends ParserRuleContext {
		public FactContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fact; }
	 
		public FactContext() { }
		public void copyFrom(FactContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PFactContext extends FactContext {
		public TerminalNode ID() { return getToken(aifParser.ID, 0); }
		public TermsContext terms() {
			return getRuleContext(TermsContext.class,0);
		}
		public PFactContext(FactContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).enterPFact(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).exitPFact(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aifVisitor ) return ((aifVisitor<? extends T>)visitor).visitPFact(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PosCondContext extends FactContext {
		public TerminalNode ID() { return getToken(aifParser.ID, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public PosCondContext(FactContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).enterPosCond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).exitPosCond(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aifVisitor ) return ((aifVisitor<? extends T>)visitor).visitPosCond(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NegCondContext extends FactContext {
		public TerminalNode ID() { return getToken(aifParser.ID, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public NegCondContext(FactContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).enterNegCond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).exitNegCond(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aifVisitor ) return ((aifVisitor<? extends T>)visitor).visitNegCond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FactContext fact() throws RecognitionException {
		FactContext _localctx = new FactContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_fact);
		int _la;
		try {
			setState(148);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				_localctx = new PFactContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				match(ID);
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__14) {
					{
					setState(136);
					match(T__14);
					setState(137);
					terms();
					setState(138);
					match(T__15);
					}
				}

				}
				break;
			case 2:
				_localctx = new PosCondContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				match(ID);
				setState(143);
				match(T__19);
				setState(144);
				term();
				}
				break;
			case 3:
				_localctx = new NegCondContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(145);
				match(ID);
				setState(146);
				match(T__20);
				setState(147);
				term();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrowContext extends ParserRuleContext {
		public ArrowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrow; }
	 
		public ArrowContext() { }
		public void copyFrom(ArrowContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FreshContext extends ArrowContext {
		public List<TerminalNode> ID() { return getTokens(aifParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(aifParser.ID, i);
		}
		public FreshContext(ArrowContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).enterFresh(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).exitFresh(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aifVisitor ) return ((aifVisitor<? extends T>)visitor).visitFresh(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NoFreshContext extends ArrowContext {
		public NoFreshContext(ArrowContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).enterNoFresh(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aifListener ) ((aifListener)listener).exitNoFresh(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aifVisitor ) return ((aifVisitor<? extends T>)visitor).visitNoFresh(this);
			else return visitor.visitChildren(this);
		}
	}
